navigation: links no longer visible when nav hidden

--- a/css/style.css
+++ b/css/style.css
@@ -880,7 +880,8 @@ body {
   text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
   background-size: 220%;
-  transition: all 0.4s; }
+  transition: all 0.4s;
+  visibility: hidden; }
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
@@ -896,6 +897,9 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%; }
+
+.navigation__checkbox:checked ~ .navigation__nav .navigation__link {
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
