--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -84,6 +84,7 @@
       background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
       background-size: 220%; // animating this will create the sliding effect
       transition: all 0.4s; 
+      visibility: hidden;
 
       span {
         margin-right: 1.5rem;
@@ -107,6 +108,10 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%; // show navigation
+  }
+
+  &__checkbox:checked ~ &__nav &__link {
+    visibility: visible;
   }
 
 
